# RRM

./: README.md
ros2_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/install/Surani_interface/share/Surani_interface/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/install/abb_irb4600_ikfast/share/abb_irb4600_ikfast/: local_setup.sh  package.sh
ros2_ws/install/abb_model/share/abb_model/: package.sh
ros2_ws/install/abb_moveit_config/share/abb_moveit_config/: local_setup.sh  package.sh
ros2_ws/install/block1_surani/lib/block1_surani/: jointlogger_node  teleop_node
ros2_ws/install/block1_surani/share/block1_surani/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/install/block1_surani/share/block1_surani/launch/: logger_node.launch.xml
ros2_ws/install/block1_suraniV2/lib/block1_suraniV2/: teleop_node
ros2_ws/install/block1_suraniV2/share/block1_suraniV2/: local_setup.dsv  local_setup.sh  package.bash  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/install/cv1/share/cv1/: package.sh  (+1 more)
ros2_ws/log/: latest_build  latest_list
ros2_ws/src/block1_surani/: CMakeLists.txt  package.xml
ros2_ws/src/block1_surani/src/: JointLogger.cpp  jointlogger.cpp  logger_node.cpp  logger_node.xml  teleop_node.cpp
ros2_ws/src/cv1/src/: cv1_node.cpp  robot.cpp
ros2_ws/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/src/log/: latest_build
ros2_ws/src/rrm/: README.md
ros2_ws/src/surani_interface/: CMakeLists.txt  package.xml
ros2_ws/src/surani_interface/src/: JointLogger.cpp
ros2_ws/src/surani_interface/srv/: TeachPoint.srv
ros2_ws/src/zad2/: CMakeLists.txt  Plot_zad2.1.xml  package.xml
ros2_ws/src/zad2.1/: CMakeLists.txt
ros2_ws/src/zad2/launch/: zad2.launch.xml
ros2_ws/src/zad2/src/: zad2_node(rename V3).cpp  zad2_node.cpp
ros2_ws/src/zad3/abb_moveit_config/: CMakeLists.txt
zad1/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
zad1/log/: latest_build
zad1/src/zad1/: CMakeLists.txt
zad1/src/zad1/src/: robot.cpp  zad1_node.cpp
(+101 files in other folders)
